--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P810.xaml
@@ -185,7 +185,7 @@
         <Machines:V01_SA_Elutriator Canvas.Left="1151" Canvas.Top="197" Height="201" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="1164" Canvas.Top="112" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="145" Canvas.Left="987" Canvas.Top="575" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="96" Canvas.Top="247" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="96" Canvas.Top="247" Height="274" Width="208" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-41-LT1" TrendName="LEVEL" Color="DryMaterial"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1223" Canvas.Top="721" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="255" Canvas.Top="748" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1061" Canvas.Top="206" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="50" Width="50">
