--- a/Prevu.Synoptics.V5540-Apollonia/P230.xaml
+++ b/Prevu.Synoptics.V5540-Apollonia/P230.xaml
@@ -5,69 +5,71 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+             xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P230" mc:Ignorable="d" 
              Height="605" Width="1030" d:Background="{DynamicResource MaterialDesignPaper}" >
-    <Canvas>
-        <Labels:Pipe Color="Water" Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="230-21-CV1" HorizontalAlignment="Center" Canvas.Left="544" Canvas.Top="191" VerticalAlignment="Top" PipeHeight="Medium">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe StatusComponent="230-01-MA1" Canvas.Left="553" Canvas.Top="526" PipeHeight="Big" Width="306" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe StatusComponent="230-01-MA1" Canvas.Left="497" Canvas.Top="470" PipeHeight="Big" Width="132" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe 
-            StatusComponent="230-71-ECS1" Canvas.Left="413" Canvas.Top="141" PipeHeight="Big" Width="211" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:V01_MU_Grinder Canvas.Left="416" Canvas.Top="225" Height="221" Width="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="6" Stroke="Black" Width="158" RenderTransformOrigin="0.5,0.5" Canvas.Left="471" Canvas.Top="44" HorizontalAlignment="Left" VerticalAlignment="Center" StrokeThickness="3"/>
-        <Machines:External Height="76" Width="80" RenderTransformOrigin="0.5,0.5" Canvas.Left="400" Canvas.Top="9" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="270"/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
-        <Rectangle Height="6" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="811" Canvas.Top="531" StrokeThickness="3" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Machines:External Height="76" Width="80" RenderTransformOrigin="0.5,0.5" Canvas.Left="816" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:QX_LongElectricalCabinet Width="290" Height="102" Canvas.Left="76" Canvas.Top="348" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="104" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="S410" Canvas.Left="244" Canvas.Top="291" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="230-21-CV1" HorizontalAlignment="Left" Canvas.Left="625" Canvas.Top="103" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="230-71-ECS1" Canvas.Left="373" Canvas.Top="90" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-MA1" Canvas.Left="515" Canvas.Top="241"/>
-        <Labels:DeviceLabel ComponentName="230-01-YA1" Canvas.Left="787" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="230-02-MA1" Canvas.Left="787" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="230-BRAKER" Canvas.Left="671" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="230-71-ECS2" Canvas.Left="373" Canvas.Top="158" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="230-71-ECS3" Canvas.Left="878" Canvas.Top="512" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Machines:V01_CV_Valve_wColor Canvas.Left="555" Canvas.Top="107" Color="Water" Height="36" Width="65" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:V01_CV_Valve_wColor.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:V01_CV_Valve_wColor.RenderTransform>
-        </Machines:V01_CV_Valve_wColor>
-    </Canvas>
+  <Canvas>
+    <Labels:Pipe Color="Water" Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="230-21-CV1" HorizontalAlignment="Left" Canvas.Left="536" Canvas.Top="191" VerticalAlignment="Center" PipeHeight="Medium">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe StatusComponent="230-01-MA1" Canvas.Left="534" Canvas.Top="526" PipeHeight="Big" Width="303" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:Pipe StatusComponent="230-01-MA1" Canvas.Left="477" Canvas.Top="470" PipeHeight="Big" Width="132" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe 
+            StatusComponent="230-71-ECS1" Canvas.Left="393" Canvas.Top="141" PipeHeight="Big" Width="211" Loaded="Pipe_Loaded" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Machines:V01_MU_Grinder Canvas.Left="396" Canvas.Top="225" Height="221" Width="289" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle Height="6" Stroke="Black" Width="158" RenderTransformOrigin="0.5,0.5" Canvas.Left="451" Canvas.Top="44" HorizontalAlignment="Left" VerticalAlignment="Center" StrokeThickness="3"/>
+    <Machines:External Height="76" Width="80" RenderTransformOrigin="0.5,0.5" Canvas.Left="380" Canvas.Top="9" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:External.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="270"/>
+        </TransformGroup>
+      </Machines:External.RenderTransform>
+    </Machines:External>
+    <Rectangle Height="6" Stroke="Black" Width="90" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" Canvas.Top="531" StrokeThickness="3" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Rectangle.RenderTransform>
+        <TransformGroup>
+          <RotateTransform Angle="90"/>
+        </TransformGroup>
+      </Rectangle.RenderTransform>
+    </Rectangle>
+    <Machines:External Height="76" Width="80" RenderTransformOrigin="0.5,0.5" Canvas.Left="794" Canvas.Top="425" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:QX_LongElectricalCabinet Width="240" Height="98" Canvas.Left="76" Canvas.Top="348" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="Q41" Canvas.Left="85" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="S410" Canvas.Left="216" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="230-21-CV1" HorizontalAlignment="Left" Canvas.Left="614" Canvas.Top="103" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="230-71-ECS1" Canvas.Left="353" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Labels:DeviceLabel ComponentName="230-01-YA1" Canvas.Left="790" Canvas.Top="241" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="230-02-MA1" Canvas.Left="790" Canvas.Top="309" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="230-71-ECS2" Canvas.Left="353" Canvas.Top="158" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="230-71-ECS3" Canvas.Left="856" Canvas.Top="512" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_CV_Valve_wColor Canvas.Left="547" Canvas.Top="107" Color="Water" Height="36" Width="65" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+      <Machines:V01_CV_Valve_wColor.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="-90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:V01_CV_Valve_wColor.RenderTransform>
+    </Machines:V01_CV_Valve_wColor>
+    <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="126" Canvas.Left="572" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="230-01-MA1" Canvas.Left="495" Canvas.Top="241"/>
+    <Labels:DeviceLabel ComponentName="230-BREAKER" Canvas.Left="681" Canvas.Top="241" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
