--- a/Prevu.Synoptics.V4978_CEDO/Pages/P490.xaml
+++ b/Prevu.Synoptics.V4978_CEDO/Pages/P490.xaml
@@ -234,7 +234,7 @@
     <Machines:CV_Valve Height="34" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1093" Canvas.Top="421" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Rectangle Height="36" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="1295" Canvas.Top="687" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1288" Canvas.Top="717" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel JumpFromLabel="460-WASHING" JumpToLabel="469-02-MA1" Canvas.Left="1285" Canvas.Top="402" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:JumpLabel JumpFromLabel="494-21-CV1" JumpToLabel="469-02-MA1" Canvas.Left="1285" Canvas.Top="402" Direction="Left" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel JumpFromLabel="490-01-MA1" JumpToLabel="474-HEAT" Canvas.Left="1080" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Top" Direction="Left"/>
     <Labels:JumpLabel JumpFromLabel="497-01-MA1" JumpToLabel="461-01-MA1" Canvas.Left="522" Canvas.Top="685" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="490-71-ECS2" Canvas.Left="545" Canvas.Top="71" HorizontalAlignment="Left" VerticalAlignment="Center" />
