--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P530.xaml
@@ -157,5 +157,7 @@
         <Labels:DeviceLabel ComponentName="L1+810-43-WT1" Canvas.Left="1142" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="L1+846-71-ECS3" Canvas.Left="1264" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="L1+482-61-LS1" Canvas.Left="128" Canvas.Top="163" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    </Canvas>
+    <Labels:DeviceLabel ComponentName="L1+848-01-MA1" Canvas.Left="1176" Canvas.Top="581" HorizontalAlignment="Center" VerticalAlignment="Center" />
+    <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1284" Canvas.Top="582" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
