--- a/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4309_AlplaSudAfrica/Pages/P880.xaml
@@ -89,7 +89,6 @@
         <Labels:Pipe Width="28" StatusComponent="926-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1093" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
-
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
@@ -240,7 +239,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="112" StatusComponent="879-71-ECS2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="85" Canvas.Top="167" HorizontalAlignment="Center" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="119" StatusComponent="879-71-ECS2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="78" Canvas.Top="176" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="104" StatusComponent="879-71-ECS2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="140" Canvas.Top="127" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -326,8 +325,8 @@
             </Machines:V01_ScarpaTrasporto.RenderTransform>
         </Machines:V01_ScarpaTrasporto>
         <Machines:V01_DV_Diverter Canvas.Left="186" Canvas.Top="74" Height="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="160" Canvas.Top="143" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="137" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Rectangle Height="94" Stroke="Black" Width="4" Canvas.Left="145" Canvas.Top="143" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="122" Canvas.Top="211" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -400,7 +399,7 @@
         <Labels:DeviceLabel ComponentName="886-01-MA1" Canvas.Left="367" Canvas.Top="514" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="197" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="488" />
         <Labels:DeviceLabel ComponentName="879-21-CV1" Canvas.Left="186" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="879-71-ECS2" Canvas.Left="16" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="879-71-ECS2" Canvas.Left="19" Canvas.Top="223" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="920-71-ECS2" Canvas.Left="952" Canvas.Top="482" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="920-62-LEV" Canvas.Left="1067" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="920-61-LEV" Canvas.Left="937" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -419,5 +418,6 @@
         <Labels:DeviceLabel ComponentName="920-01-ECS10" Canvas.Left="838" Canvas.Top="219" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="920-01-ECS11" Canvas.Left="838" Canvas.Top="285" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="920-01-ECS12" Canvas.Left="838" Canvas.Top="351" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_Material_Inlet_Outlet Canvas.Left="38" Canvas.Top="146" Height="70" Width="52" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
