--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P530.xaml
@@ -110,7 +110,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Rectangle HorizontalAlignment="Center" Height="36" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="416" Canvas.Top="280"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="1102" Canvas.Top="118" Height="250" Width="170" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="1102" Canvas.Top="118" Height="250" Width="170" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L2+810-43-WT1" Color="DryMaterial" TrendName="WEIGHT"/>
     <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="589" Canvas.Top="459" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="307" Canvas.Top="267" Height="186" Width="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:CV_Valve Height="35" Width="43" RenderTransformOrigin="0.5,0.5" Canvas.Left="345" Canvas.Top="490" HorizontalAlignment="Center" VerticalAlignment="Top">
