--- a/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L1/Pages/L1_P430.xaml
@@ -21,7 +21,7 @@
     </Labels:Pipe>
     <Labels:Pipe Width="147" Canvas.Top="220" StatusComponent="L1+430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="1016" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="154" VisibilityComponent="" Canvas.Top="426" StatusComponent="L1+430-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water"/>
-    <Labels:Pipe Width="175" Color="Water" StatusComponent="L1+420-71-ECS1" VisibilityComponent="" Canvas.Left="381" Canvas.Top="131" Icon="Right" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="153" Color="Water" StatusComponent="L1+420-71-ECS1" VisibilityComponent="" Canvas.Left="392" Canvas.Top="131" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="136" StatusComponent="L1+420-01-MA1" PipeHeight="Medium" Canvas.Left="720" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="L1+420-21-CV1" VisibilityComponent="" Canvas.Left="568" Canvas.Top="171" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -182,8 +182,8 @@
     <Labels:Pipe Width="49" VisibilityComponent="L1+447-21-CV1" VisibilitySignal="LS2" VerticalAlignment="Top" Canvas.Top="652" StatusComponent="L1+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1443" HorizontalAlignment="Center"/>
     <Labels:Pipe Width="33" VisibilityComponent="L1+447-21-CV1" VisibilitySignal="LS1" VerticalAlignment="Top" Canvas.Top="684" StatusComponent="L1+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1452" HorizontalAlignment="Center" Color="ByProduct"/>
     <Machines:V01_DV_Diverter Width="80" VerticalAlignment="Top" Canvas.Top="639" RenderTransformOrigin="0.5,0.5" Canvas.Left="1380" Height="62" HorizontalAlignment="Center"/>
-    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="188" Canvas.Top="269" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial" ComponentName="L1+320-43-LT1" TrendName="LEVEL"/>
-    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="243" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_Silo_wAgitator Canvas.Left="188" Canvas.Top="279" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" Color="DryMaterial" ComponentName="L1+320-43-LT1" TrendName="LEVEL"/>
+    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="253" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="1146" Canvas.Top="144" Height="180" Width="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="1281" Canvas.Top="303" HorizontalAlignment="Center" VerticalAlignment="Top" Height="147" Width="172"/>
     <Machines:V01_CV_Valve_wColor Canvas.Left="1121" Canvas.Top="480" Color="Water" Height="26" Width="48" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
@@ -202,14 +202,14 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Rectangle Height="2" Stroke="Black" Width="112" RenderTransformOrigin="0.5,0.5" Canvas.Left="326" Canvas.Top="113" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Rectangle Height="2" Stroke="Black" Width="112" RenderTransformOrigin="0.5,0.5" Canvas.Left="337" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="352" Canvas.Top="13" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="363" Canvas.Top="15" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="180"/>
@@ -239,10 +239,10 @@
     <Labels:JumpLabel JumpFromLabel="L1+320-43-LT1" JumpToLabel="L0+383-21-CV1" Canvas.Left="57" Canvas.Top="207" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel JumpFromLabel="L1+383-21-CV1" JumpToLabel="L0+997-BAGS" Canvas.Left="1444" Canvas.Top="732" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="L1+430-VIEW" DetailsPageName="L1_D430" HideComponentName="True" Canvas.Left="980" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="L1+320-HYD" DetailsPageName="L1_D320" HorizontalAlignment="Center" Canvas.Left="231" Canvas.Top="401" VerticalAlignment="Top" />
+    <Labels:DetailsLabel ComponentName="L1+320-HYD" DetailsPageName="L1_D320" HorizontalAlignment="Center" Canvas.Left="233" Canvas.Top="407" VerticalAlignment="Top" />
     <Labels:DeviceLabel Canvas.Top="687" Canvas.Left="1281" ComponentName="L1+446-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="584" Canvas.Left="1375" HorizontalAlignment="Center" ComponentName="L1+447-21-CV1"/>
-    <Labels:DeviceLabel ComponentName="L1+320-43-LT1" Canvas.Left="292" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L1+320-43-LT1" Canvas.Left="292" Canvas.Top="198" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+322-01-MA1" Canvas.Left="115" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L1+458-01-MA1" Canvas.Left="1272" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+460-01-MA1" Canvas.Left="1377" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -253,8 +253,8 @@
     <Labels:DeviceLabel ComponentName="L1+420-22-CV1" Canvas.Left="455" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-23-CV1" Canvas.Left="455" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-01-MA1" Canvas.Left="638" Canvas.Top="118" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L1+420-71-ECS1" Canvas.Left="396" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L1+420-71-ECS3" Canvas.Left="284" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L1+420-71-ECS1" Canvas.Left="407" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L1+420-71-ECS3" Canvas.Left="292" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L1+420-21-CV1" Canvas.Left="519" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-02-MA1" Canvas.Left="671" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+470-01-MA1" Canvas.Left="864" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -266,5 +266,6 @@
     <Labels:DeviceLabel ComponentName="L1+326-01-MA1" Canvas.Left="196" Canvas.Top="674" HorizontalAlignment="Center" VerticalAlignment="Center" />
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="557" Canvas.Top="365" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L1+420-24-CV1" Canvas.Left="455" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L1+420-71-ECS4" Canvas.Left="292" Canvas.Top="130" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
