--- a/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
+++ b/Prevu.Synoptics.V4659_Steinbais/L2/Pages/L2_P430.xaml
@@ -30,7 +30,7 @@
     <Labels:Pipe Width="266" Color="Water" StatusComponent="L2+420-71-ECS1" VisibilityComponent="" Canvas.Left="491" Canvas.Top="38" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="147" Canvas.Top="220" StatusComponent="L2+430-01-MA4" RenderTransformOrigin="0.5,0.5" Canvas.Left="1016" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="154" VisibilityComponent="" Canvas.Top="426" StatusComponent="L2+430-03-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="789" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water"/>
-    <Labels:Pipe Width="205" Color="Water" StatusComponent="L2+420-71-ECS1" VisibilityComponent="" Canvas.Left="351" Canvas.Top="131" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="157" Color="Water" StatusComponent="L2+420-71-ECS1" VisibilityComponent="" Canvas.Left="379" Canvas.Top="131" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Width="136" StatusComponent="L2+420-01-MA1" PipeHeight="Medium" Canvas.Left="720" Canvas.Top="215" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Color="Water" Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="L2+420-21-CV1" VisibilityComponent="" Canvas.Left="568" Canvas.Top="171" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -190,8 +190,8 @@
     <Labels:Pipe Width="49" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS2" VerticalAlignment="Top" Canvas.Top="652" StatusComponent="L2+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1443" HorizontalAlignment="Center"/>
     <Labels:Pipe Width="33" VisibilityComponent="L2+447-21-CV1" VisibilitySignal="LS1" VerticalAlignment="Top" Canvas.Top="684" StatusComponent="L2+446-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1452" HorizontalAlignment="Center" Color="ByProduct"/>
     <Machines:V01_DV_Diverter Width="80" VerticalAlignment="Top" Canvas.Top="639" RenderTransformOrigin="0.5,0.5" Canvas.Left="1380" Height="62" HorizontalAlignment="Center"/>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="191" Canvas.Top="265" Height="250" Width="169" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="L2+320-41-LT1" Color="WetMaterial" TrendName="LEVEL"/>
-    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="243" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="191" Canvas.Top="275" Height="250" Width="169" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="L2+320-41-LT1" Color="WetMaterial" TrendName="LEVEL"/>
+    <Machines:V01_Radar Canvas.Left="284" Canvas.Top="253" Height="50" Width="34" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SCW_Screw_wHopper Canvas.Left="1146" Canvas.Top="144" Height="180" Width="174" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="1281" Canvas.Top="303" HorizontalAlignment="Center" VerticalAlignment="Top" Height="147" Width="172"/>
     <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="146" Canvas.Top="592" Height="22" Width="145" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -203,14 +203,14 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Rectangle Height="2" Stroke="Black" Width="112" RenderTransformOrigin="0.5,0.5" Canvas.Left="296" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Rectangle Height="2" Stroke="Black" Width="112" RenderTransformOrigin="0.5,0.5" Canvas.Left="324" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Rectangle.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="90"/>
         </TransformGroup>
       </Rectangle.RenderTransform>
     </Rectangle>
-    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="322" Canvas.Top="13" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="15" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Machines:External.RenderTransform>
         <TransformGroup>
           <RotateTransform Angle="180"/>
@@ -250,7 +250,7 @@
     <Labels:DetailsLabel ComponentName="L2+430-VIEW" DetailsPageName="L2_D430" HideComponentName="True" Canvas.Left="980" Canvas.Top="129" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel Canvas.Top="687" Canvas.Left="1281" ComponentName="L2+446-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel VerticalAlignment="Top" Canvas.Top="584" Canvas.Left="1375" HorizontalAlignment="Center" ComponentName="L2+447-21-CV1"/>
-    <Labels:DeviceLabel ComponentName="L2+320-41-LT1" Canvas.Left="292" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L2+320-41-LT1" Canvas.Left="282" Canvas.Top="201" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+322-01-MA1" Canvas.Left="115" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L2+458-01-MA1" Canvas.Left="1272" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+460-01-MA1" Canvas.Left="1377" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -260,20 +260,21 @@
     <Labels:DeviceLabel ComponentName="L2+420-22-CV1" Canvas.Left="455" Canvas.Top="433" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+420-23-CV1" Canvas.Left="455" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+420-01-MA1" Canvas.Left="638" Canvas.Top="118" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L2+420-71-ECS1" Canvas.Left="366" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="L2+420-71-ECS3" Canvas.Left="254" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L2+420-71-ECS1" Canvas.Left="389" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L2+420-71-ECS3" Canvas.Left="282" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+420-DISCHARGE" Canvas.Left="455" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L2+420-21-CV1" Canvas.Left="519" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="L2+420-21-CV1" Canvas.Left="518" Canvas.Top="74" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+420-02-MA1" Canvas.Left="671" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+470-01-MA1" Canvas.Left="864" Canvas.Top="556" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+442-01-MA1" Canvas.Left="999" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+443-01-MA1" Canvas.Left="1133" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel ComponentName="L2+443-02-MA1" Canvas.Left="992" Canvas.Top="637" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="L2+320-01-MA1" Canvas.Left="227" Canvas.Top="324" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DeviceLabel ComponentName="L2+320-01-MA1" Canvas.Left="227" Canvas.Top="334" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel ComponentName="L2+328-01-MA1" Canvas.Left="27" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="L2+326-01-MA1" Canvas.Left="196" Canvas.Top="674" HorizontalAlignment="Center" VerticalAlignment="Center" />
     <Labels:DeviceLabel ComponentName="L2+460-21-CV1" Canvas.Left="1101" Canvas.Top="425" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="557" Canvas.Top="365" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="L2+420-24-CV1" Canvas.Left="455" Canvas.Top="353" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel ComponentName="L2+420-71-ECS4" Canvas.Left="282" Canvas.Top="131" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
